test/types/records/split-init/error-split-init-global.chpl
var c;
c = 1;
type ttt;
ttt = int;
